--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,29 @@
-streamlit
-sentence_transformers
-scikit-learn
-tiktoken
-pandas
-openpyxl
-umap-learn
-numpy
-meilisearch
-pylette
-botocore
-boto3
-python-dotenv
-requests
-pillow
-tqdm
-streamlit_extras
-torch
+# Core app
+streamlit==1.44.0
+streamlit-extras==0.6.0
+
+# Embeddings & NLP
+sentence-transformers==2.2.2
+tiktoken==0.9.0
+
+# Data processing
+numpy==1.26.4
+pandas==2.2.3
+openpyxl==3.1.5
+scikit-learn==1.6.1
+umap-learn==0.5.7
+
+# Search & utilities
+meilisearch==0.34.0
+pylette==4.0.1
+python-dotenv==1.0.1
+requests==2.32.3
+pillow==10.4.0
+tqdm==4.67.1
+
+# AWS (boto3 without extra botocore version conflicts)
+boto3==1.37.23
+botocore==1.37.23
+
+# Torch (CPU only)
+torch==2.6.0+cpu --index-url https://download.pytorch.org/whl/cpu
