--- a/requirements.txt
+++ b/requirements.txt
@@ -26,4 +26,5 @@ boto3==1.37.23
 botocore==1.37.23
 
 # Torch (CPU only)
-torch==2.6.0+cpu --index-url https://download.pytorch.org/whl/cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.6.0
